Some few changes. ;-)
Rev: html/mail/edit.html:1.3
Rev: html/mail/edit_options.html:1.2
Rev: html/mail/import.html:1.6
Rev: html/mail/make_userbutton.pike:1.3
Rev: html/mail/new_mailbox.pike:1.2
Rev: html/mail/reply.html:1.1
Rev: html/mail/show_mail:1.5
Rev: html/mail/show_mailboxes:1.7
Rev: html/mail/show_toplevel:1.5

--- a/html/mail/edit_options.html
+++ b/html/mail/edit_options.html
@@ -5,6 +5,7 @@
    <amail-user-variable variable=realname set="#firstname:quote=dtag# #lastname:quote=dtag#">
    <amail-user-variable variable=signature set="#signature:quote=dtag#">
    <amail-user-variable variable=email set="#email:quote=dtag#">
+   <amail-user-variable variable=org set="#org:quote=dtag#">
 </formoutput>
 </nooutput>
 </define>
@@ -33,7 +34,7 @@
 <cset variable=firstname preparse><mail-userinfo firstname></cset>
 <cset variable=lastname preparse><mail-userinfo lastname></cset>
 <cset variable=email preparse><mail-userinfo email></cset>
-<cset variable=organization preparse><mail-userinfo organization></cset>
+<cset variable=org preparse><mail-userinfo org></cset>
 
 <gauge resultonly>
   <form action="edit_options.html">
