--- a/html/mail/import.html
+++ b/html/mail/import.html
@@ -1,4 +1,7 @@
 <insert file=stddef>
 <h1>AutoMail(tm)(r) import from directory. :-)</h1>
   
-<debug-import-mail-from-dir dir=/home/per/Mail/mail.roxen.misc>
+<debug-import-mail-from-dir 
+      dir=/home/list/roxen-alpha/archive/latest
+      mark=noread
+      to="Roxen Alpha">
